todos los dto creados

--- a/Negocio/src/main/resources/application.properties
+++ b/Negocio/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.datasource.password=root
 spring.jpa.show-sql = true
 #[Opcional]Crea las tablas.
 spring.jpa.hibernate.ddl-auto=update
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=juannaruto51@gmail.com
+spring.mail.password=Juanpablo1
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+
+jwt.secret=4Hzkd7uAVdYYPUCtY582NTuKWenjGjLEeUCegtnf35pMWzA2kU
+jwt.expiration=1800000
+jwt.refresh_expiration=604800000
