Backend funcionando excepto imagenes

--- a/Negocio/src/main/resources/application.properties
+++ b/Negocio/src/main/resources/application.properties
@@ -12,10 +12,9 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=juannaruto51@gmail.com
-spring.mail.password=Juanpablo1
+spring.mail.username=nallyberoc@gmail.com
+spring.mail.password=leebrhzqtzhqngsv
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 
 jwt.secret=4Hzkd7uAVdYYPUCtY582NTuKWenjGjLEeUCegtnf35pMWzA2kU
